<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>decentralized-identity</groupId>
	<artifactId>uni-resolver</artifactId>
	<packaging>pom</packaging>
	<version>0.15-SNAPSHOT</version>
	<name>uni-resolver</name>
	<description>A Universal Resolver for decentralized identity.</description>
	<url>https://uniresolver.io/</url>

	<developers>
		<developer>
			<name>Markus Sabadello</name>
			<email>markus@danubetech.com</email>
			<organization>Danube Tech</organization>
			<organizationUrl>https://danubetech.com/</organizationUrl>
		</developer>
		<developer>
			<name>Cihan Saglam</name>
			<email>cihan.saglam@danubetech.com</email>
			<organization>Danube Tech</organization>
			<organizationUrl>https://danubetech.com/</organizationUrl>
		</developer>
	</developers>

	<modules>
		<module>uni-resolver-core</module>
		<module>uni-resolver-local</module>
		<module>uni-resolver-client</module>
		<module>uni-resolver-web</module>
		<module>driver</module>
		<module>driver-http</module>
	</modules>

	<scm>
		<url>https://github.com/decentralized-identity/universal-resolver</url>
		<connection>scm:git:https://github.com/decentralized-identity/universal-resolver.git</connection>
		<developerConnection>scm:git:https://github.com/decentralized-identity/universal-resolver.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>

	<issueManagement>
		<url>https://github.com/decentralized-identity/universal-resolver/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>danubetech-maven-snapshots</id>
			<url>https://repo.danubetech.com/repository/maven-snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>danubetech-maven-releases</id>
			<url>https://repo.danubetech.com/repository/maven-releases/</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>danubetech-maven-public</id>
			<url>https://repo.danubetech.com/repository/maven-public/</url>
		</repository>
	</repositories>

	<properties>

		<!-- Project Properties -->

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>
		<github.global.server>github</github.global.server>
		<project.build.timestamp>${maven.build.timestamp}</project.build.timestamp>

		<!-- Dependency Versions -->

		<did-common-java.version>1.9.0</did-common-java.version>

		<slf4j.version>2.0.9</slf4j.version>
		<gson.version>2.10.1</gson.version>
		<jackson.databind.version>2.15.3</jackson.databind.version>
		<jackson.core.version>2.15.3</jackson.core.version>
		<jackson.annotations.version>2.15.3</jackson.annotations.version>
		<httpclient.version>4.5.14</httpclient.version>

		<springframework.version>6.0.13</springframework.version>
		<jakarta.servlet-api.version>5.0.0</jakarta.servlet-api.version>

		<junit-jupiter.version>5.10.0</junit-jupiter.version>
		<mockito-core.version>5.6.0</mockito-core.version>
		<junit.version>4.13.2</junit.version>

		<!-- Plugin Versions -->

		<maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
		<maven-war-plugin.version>3.4.0</maven-war-plugin.version>
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
		<maven-dependency-plugin.version>3.6.0</maven-dependency-plugin.version>
		<maven-scm-plugin.version>2.0.1</maven-scm-plugin.version>
		<maven-release-plugin.version>3.0.1</maven-release-plugin.version>
		<maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
		<maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-no-snapshots</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.6.3</version>
								</requireMavenVersion>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources/</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*</include>
				</includes>
				<excludes>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/resources/</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<release>${java.version}</release>
						<forceJavacCompilerUse>true</forceJavacCompilerUse>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven-source-plugin.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${maven-dependency-plugin.version}</version>
					<executions>
						<execution>
							<id>execution</id>
							<phase>package</phase>
							<goals>
								<goal>copy-dependencies</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<includeScope>runtime</includeScope>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>${maven-release-plugin.version}</version>
					<configuration>
						<tagNameFormat>@{project.version}</tagNameFormat>
						<scmCommentPrefix>[skip ci]</scmCommentPrefix>
						<scmReleaseCommitComment>Latest Release @{releaseLabel}</scmReleaseCommitComment>
						<pomFileName>pom.xml</pomFileName>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-scm-plugin</artifactId>
					<version>${maven-scm-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${maven-war-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven-deploy-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>${maven-enforcer-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>ci</id>
			<properties><packaging.type>jar</packaging.type></properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-enforcer-plugin</artifactId>
						<executions>
							<execution>
								<id>enforce-no-snapshots</id>
								<goals>
									<goal>enforce</goal>
								</goals>
								<configuration>
									<rules>
										<requireReleaseDeps>
											<message>No Snapshots Allowed!</message>
										</requireReleaseDeps>
									</rules>
									<fail>true</fail>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-core</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-local</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-client</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-web</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-driver</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>uni-resolver-driver-http</artifactId>
				<version>${project.parent.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>decentralized-identity</groupId>
				<artifactId>did-common-java</artifactId>
				<version>${did-common-java.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.annotations.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.databind.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${springframework.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${springframework.version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.servlet</groupId>
				<artifactId>jakarta.servlet-api</artifactId>
				<version>${jakarta.servlet-api.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit-jupiter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>${junit-jupiter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito-core.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
	</dependencies>

</project>
